--- a/new.css
+++ b/new.css
@@ -97,7 +97,8 @@ a {
     border-radius: 50%;
 }
 .intro p{
-    width: 700px;
+    padding: 15px;
+    max-width: 700px;
     font-size: 22px;
     text-align: center;
 }
